[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main/Credits.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/DelaGothicOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main/Map/Escaped_ending.gd" type="Script" id=3]
[ext_resource path="res://Assets/SoundFX/MyVoice/SecretEnding-Escaped.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Escaped_ending" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "CONGRATULATIONS YOU MANAGED TO FIND SAFE LAND AND ESCAPE!
like a coward *cough cough* like a smart man i mean... good job good job...now uhh... well that's it, you just fucking ignored all the effort i put into making this game GO BACK AND REPLAY IT YOU SMARTASS!!!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 672.0
margin_right = 1024.0
margin_bottom = 702.0
custom_fonts/font = SubResource( 2 )
text = "CreD&(#&28!s"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
margin_top = 706.0
margin_right = 1024.0
margin_bottom = 736.0
custom_fonts/font = SubResource( 2 )
text = "Send_a_fuck_you_message_to_dev_and_quit(10)"

[node name="Credits" parent="." instance=ExtResource( 1 )]
visible = false

[node name="ending_narration" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
